--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ django-model-utils==3.1.2
 django-sslserver==0.20
 whitenoise==4.1.2
 channels
-pypiwin32==223
+django-cors-headers==2.5.2
 Pillow==5.4.1
