--- a/vkapp_node/package.json
+++ b/vkapp_node/package.json
@@ -14,6 +14,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-request": "^3.1.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
@@ -29,5 +30,6 @@
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
