--- a/vkapp_node/package.json
+++ b/vkapp_node/package.json
@@ -4,24 +4,11 @@
   "private": true,
   "homepage": "https://github.com/Archelunch/liver",
   "dependencies": {
-    "@vkontakte/icons": "^1.1.1",
     "@vkontakte/vkui": "^2.5.8",
     "@vkontakte/vkui-connect": "^1.0.0",
-    "ecb-exchange-rates": "0.0.7",
-    "gh-pages": "^1.2.0",
-    "history": "^4.7.2",
-    "lodash": "^4.17.10",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "react-request": "^3.1.2",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "seamless-immutable": "^7.1.3"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,6 +17,5 @@
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build"
-  },
-  "proxy": "http://localhost:8000"
+  }
 }
